Add RDoc task to Rakefile

--- a/vm/Rakefile
+++ b/vm/Rakefile
@@ -1,5 +1,6 @@
 require 'rubygems'
 require 'rake'
+require 'rake/rdoctask'
 require 'spec/rake/spectask'
 
 desc 'Run all specs'
@@ -14,4 +15,13 @@ Spec::Rake::SpecTask.new('rcov') do |t|
   t.spec_files = Dir['spec/**/*_spec.rb'].sort
   t.libs = ['lib']
   t.rcov = true
+end
+
+Rake::RDocTask.new do |rdoc|
+  rdoc.main = 'README.rdoc'
+  rdoc.rdoc_files.include('README.rdoc', 'LICENSE', 'lib/**/*.rb')
+  rdoc.title = 'D²NA Virtual Machine'
+  rdoc.rdoc_dir = 'doc'
+  rdoc.options << '-c utf-8'
+  rdoc.options << '--all'
 end
