Remove from Evolution RCov VM files

--- a/evolution/Rakefile
+++ b/evolution/Rakefile
@@ -13,7 +13,7 @@ Spec::Rake::SpecTask.new('rcov') do |t|
   t.spec_files = Dir['spec/**/*_spec.rb'].sort
   t.libs = ['lib']
   t.rcov = true
-  t.rcov_opts = ['--text-summary']
+  t.rcov_opts = ['--text-summary --exclude vm,lib/d2na-evolution.rb']
 end
 
 Rake::RDocTask.new do |rdoc|
